# forge

./: .gitignore  Makefile  README.md  config.yaml  docker-compose.yaml  env.example
api/: Dockerfile  go.mod  go.sum
api/cmd/forge/: main.go
api/internal/cache/: redis.go
api/internal/db/: mysql.go
api/internal/handlers/: cache.go  database.go  forge.go  logsources.go  observe.go  routes.go  swagger.go  system.go
api/internal/logger/: logger.go
api/internal/logsources/: manager.go
api/internal/metrics/: metrics.go
api/internal/middleware/: metrics.go
api/internal/observe/: loki.go
api/internal/routes/: routes.go
api/internal/system/: docker.go
api/proto/forge/v1/: cache.proto  db.proto  forge.proto  observe.proto
data/promtail/: logsources.yaml  promtail-dynamic.yml
data/routes/: routes.conf  routes.yaml
sdk/python/: README.md  pyproject.toml
sdk/python/forge/: __init__.py  cache.py  client.py  db.py  observe.py
sdk/python/tests/: __init__.py  conftest.py  test_cache.py  test_database.py  test_e2e.py  test_exporters.py  test_health.py  test_logsources.py  test_observability.py  test_routes.py
services/grafana/provisioning/dashboards/: api.json  dashboards.yml  forge-overview.json  mysql.json  nginx-gateway.json  redis.json  service-uptime.json
services/grafana/provisioning/datasources/: datasources.yml
services/loki/: loki.yml
services/mysql/: my.cnf
services/nginx/: dynamic-routes.conf  nginx.conf
services/prometheus/: prometheus.yml
services/promtail/: promtail.yml
services/tempo/: tempo.yml
